--- a/css/kindle.css
+++ b/css/kindle.css
@@ -250,3 +250,50 @@ html.night {
     font-weight: bolder;
     text-align: center;
 }
+
+/* 添加适配不同 Kindle 设备的样式 */
+@media screen and (max-width: 600px) {
+    body {
+        zoom: 0.8;
+        -moz-transform: scale(0.8);
+        -moz-transform-origin: 0 0;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    body {
+        zoom: 0.9;
+        -moz-transform: scale(0.9);
+        -moz-transform-origin: 0 0;
+    }
+}
+
+/* 基础样式优化 */
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* 确保文字大小可缩放 */
+.weather-info {
+    font-size: calc(16px + 1vw);
+}
+
+.temperature {
+    font-size: calc(20px + 1.5vw);
+}
+
+.date-time {
+    font-size: calc(14px + 0.8vw);
+}
